Fix shadows not showing for the reviews on medium sized screens.

--- a/resources/sass/media-queries.scss
+++ b/resources/sass/media-queries.scss
@@ -68,10 +68,11 @@
 
     .review-cell {
         width: 60%;
+        margin-bottom: 20px;
     }
 
     // Placement of the dots.
     .flickity-page-dots {
-        bottom: -20px;
+        bottom: 10px;
     }
 }
